--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -7,107 +7,41 @@ on:
 
 jobs:
   backup:
-    name: PostgreSQL Backup
+    name: PostgreSQL Backup to R2
     runs-on: ubuntu-latest
     
     steps:
-      - name: Create database backup
+      - name: Run existing backup script
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
-            echo "📦 Starting database backup..."
+            echo "📦 Triggering production backup script..."
             
-            # Create backup directory if not exists
-            mkdir -p /opt/qscrap/backups
-            
-            # Create timestamped backup
-            BACKUP_FILE="/opt/qscrap/backups/qscrap_db_$(date +%Y%m%d_%H%M%S).sql.gz"
-            docker exec qscrap-postgres pg_dump -U postgres qscrap_db | gzip > $BACKUP_FILE
-            
-            # Verify backup was created
-            if [ -f "$BACKUP_FILE" ]; then
-              SIZE=$(du -h $BACKUP_FILE | cut -f1)
-              echo "✅ Backup created: $BACKUP_FILE ($SIZE)"
+            # Use the existing proven backup script
+            if [ -f /opt/qscrap/scripts/backup-db.sh ]; then
+              chmod +x /opt/qscrap/scripts/backup-db.sh
+              /opt/qscrap/scripts/backup-db.sh
             else
-              echo "❌ Backup failed!"
+              echo "❌ Backup script not found!"
               exit 1
             fi
-            
-            # Cleanup: Keep only last 7 daily backups
-            echo "🧹 Cleaning old backups..."
-            ls -t /opt/qscrap/backups/*.sql.gz 2>/dev/null | tail -n +8 | xargs -r rm -v
-            
-            # List current backups
-            echo "📋 Current backups:"
-            ls -lh /opt/qscrap/backups/*.sql.gz 2>/dev/null || echo "No backups found"
 
-      - name: Verify backup integrity
+      - name: Verify backup
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
+            echo "=== Latest Local Backups ==="
+            ls -lh /opt/qscrap/backups/*.sql.gz 2>/dev/null | tail -3
+            
+            echo ""
+            echo "=== Backup Integrity Check ==="
             LATEST=$(ls -t /opt/qscrap/backups/*.sql.gz 2>/dev/null | head -1)
             if [ -n "$LATEST" ]; then
-              # Test gunzip integrity
-              gunzip -t "$LATEST" && echo "✅ Backup integrity verified"
-            fi
-
-  sync-to-r2:
-    name: Sync to Cloudflare R2
-    runs-on: ubuntu-latest
-    needs: [backup]
-    if: ${{ secrets.R2_ACCESS_KEY_ID != '' }}
-    
-    steps:
-      - name: Install rclone
-        run: |
-          curl https://rclone.org/install.sh | sudo bash
-
-      - name: Configure rclone for R2
-        run: |
-          mkdir -p ~/.config/rclone
-          cat > ~/.config/rclone/rclone.conf << EOF
-          [r2]
-          type = s3
-          provider = Cloudflare
-          access_key_id = ${{ secrets.R2_ACCESS_KEY_ID }}
-          secret_access_key = ${{ secrets.R2_SECRET_ACCESS_KEY }}
-          endpoint = https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com
-          acl = private
-          EOF
-
-      - name: Sync backup to R2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          password: ${{ secrets.VPS_PASSWORD }}
-          script: |
-            # Install rclone if not present
-            if ! command -v rclone &> /dev/null; then
-              curl https://rclone.org/install.sh | sudo bash
-            fi
-            
-            # Configure rclone
-            mkdir -p ~/.config/rclone
-            cat > ~/.config/rclone/rclone.conf << EOF
-            [r2]
-            type = s3
-            provider = Cloudflare
-            access_key_id = ${{ secrets.R2_ACCESS_KEY_ID }}
-            secret_access_key = ${{ secrets.R2_SECRET_ACCESS_KEY }}
-            endpoint = https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com
-            acl = private
-            EOF
-            
-            # Sync latest backup to R2
-            LATEST=$(ls -t /opt/qscrap/backups/*.sql.gz 2>/dev/null | head -1)
-            if [ -n "$LATEST" ]; then
-              rclone copy "$LATEST" r2:qscrap-backups/ -v
-              echo "✅ Synced to R2: $(basename $LATEST)"
+              gunzip -t "$LATEST" && echo "✅ Integrity verified: $(basename $LATEST)"
             fi
