--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,62 +14,20 @@ permissions:
   actions: read
 
 jobs:
-  codeql:
-    name: CodeQL Analysis
+  secret-scan:
+    name: Secret Detection
     runs-on: ubuntu-latest
-    continue-on-error: true  # Don't block deployment
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
         with:
-          languages: javascript-typescript
+          fetch-depth: 0
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:javascript-typescript"
-
-  trivy-container:
-    name: Container Vulnerability Scan
-    runs-on: ubuntu-latest
-    continue-on-error: true  # Don't block deployment
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Docker image
-        run: docker build -t qscrap-backend:scan .
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: qscrap-backend:scan
-          format: 'table'
-          severity: 'CRITICAL,HIGH'
-          exit-code: '0'  # Don't fail on vulnerabilities
-
-  trivy-fs:
-    name: Filesystem Security Scan
-    runs-on: ubuntu-latest
-    continue-on-error: true  # Don't block deployment
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Trivy filesystem scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'table'
-          severity: 'CRITICAL,HIGH'
-          exit-code: '0'  # Don't fail on vulnerabilities
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   dependency-audit:
     name: Dependency Audit
@@ -88,20 +46,28 @@ jobs:
         run: npm ci
 
       - name: Run npm audit
-        run: npm audit --audit-level=critical
+        run: |
+          echo "=== Dependency Security Audit ==="
+          npm audit --audit-level=critical || echo "⚠️ Found vulnerabilities (non-blocking)"
         continue-on-error: true
 
-  secret-scan:
-    name: Secret Detection
+  container-scan:
+    name: Container Scan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        continue-on-error: true  # Report but don't block
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Docker image
+        run: docker build -t qscrap-backend:scan . || exit 0
+        continue-on-error: true
+
+      - name: Run Trivy vulnerability scanner
+        if: success()
+        run: |
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
+            aquasec/trivy:latest image \
+            --severity CRITICAL,HIGH \
+            --no-progress \
+            qscrap-backend:scan || echo "⚠️ Scan complete (non-blocking)"
+        continue-on-error: true
