--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,29 +58,32 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
-            cd /opt/qscrap
-            
-            echo "📥 Pulling latest changes..."
-            git fetch origin main
-            git reset --hard origin/main
-            
-            echo "🏷️ Tagging current stable version..."
+            echo "🏷️ Tagging current as stable for rollback..."
             docker tag qscrap-backend:latest qscrap-backend:stable 2>/dev/null || true
             
-            echo "🔨 Rebuilding backend..."
-            docker compose build --no-cache backend
+            echo "📥 Pulling latest image from GHCR..."
+            docker pull ghcr.io/mechimaher/qscrap:latest || true
             
-            echo "🚀 Deploying..."
-            docker compose up -d
+            echo "🔨 Rebuilding backend container..."
+            docker stop qscrap-backend 2>/dev/null || true
+            docker rm qscrap-backend 2>/dev/null || true
+            
+            # Restart with existing docker-compose or standalone
+            if [ -f /root/docker-compose.yml ]; then
+              cd /root && docker compose up -d
+            else
+              docker run -d --name qscrap-backend \
+                --network host \
+                -e NODE_ENV=production \
+                --restart unless-stopped \
+                qscrap-backend:latest || docker start qscrap-backend
+            fi
             
             echo "⏳ Waiting for services..."
-            sleep 15
-            
-            echo "🗄️ Running migrations..."
-            docker exec qscrap-backend npm run db:migrate || true
+            sleep 10
             
             echo "📝 Recording deployment..."
-            git rev-parse HEAD > /opt/qscrap/.last_good_deploy
+            echo "${{ github.sha }}" > /root/.last_good_deploy
             
             echo "✅ Deployment complete!"
             docker ps --filter name=qscrap
@@ -119,7 +122,7 @@ jobs:
             # Disk usage
             echo ""
             echo "=== Disk Usage ==="
-            df -h /opt/qscrap | tail -1
+            df -h /root | tail -1
 
       - name: Notify success
         if: success()
