--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "@sentry/react-native": "^7.11.0",
     "@stripe/stripe-react-native": "0.58.0",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
