--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint src --ext .ts --max-warnings 0",
     "lint:fix": "eslint src --ext .ts --fix",
     "db:reset": "node reset-and-seed.js",
-    "db:migrate": "node scripts/migrate.js"
+    "db:migrate": "node scripts/migrate.js",
+    "db:migrate:status": "node scripts/migrate.js status",
+    "db:migrate:dry-run": "node scripts/migrate.js dry-run"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,6 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.5",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.2",
     "compression": "^1.8.1",
     "connect-redis": "^9.0.0",
