feat: robustness sprint complete — expo-image, memoization, skeleton loading, accessibility labels, 199-test suite
Phase 1: expo-image migration (11 files), TypeScript 0 errors, Sentry removed
Phase 2: useCallback/useMemo on 6 key screens
Phase 3: Skeleton loading on 4 screens (NotificationsScreen, EditProfileScreen, ChatScreen, CounterOfferScreen)
Phase 4: Accessibility labels on 6 screens (LoginScreen, ProfileScreen, SettingsScreen, NotificationsScreen, EditProfileScreen, ChatScreen)
Phase 5: Test infrastructure (jest + ts-jest + 20 module mocks) with 199 passing tests
- apiConfig.test.ts: 16 endpoint validation tests
- utils.test.ts: 107 tests (validation, formatters, RTL, cardValidation, errorHandler)
- api.test.ts: 36 tests (all API methods, auth, token management)
- integration.test.ts: 40 tests (10 critical end-to-end user flows)

Includes: component extraction (HomeScreen, OrderDetailScreen, RequestDetailScreen), env config, error boundaries, screen error boundaries

--- a/mobile/.env.template
+++ b/mobile/.env.template
@@ -5,6 +5,13 @@
 EXPO_PUBLIC_API_URL=https://api.qscrap.qa/api
 EXPO_PUBLIC_SOCKET_URL=https://api.qscrap.qa
 
+# Google Maps API Key (for geocoding, places, directions)
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Stripe Publishable Key (use pk_test_ for development, pk_live_ for production)
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+
+
 # Firebase (Android Push Notifications)
 # Download google-services.json from Firebase Console
 # Place in mobile/ directory
