--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --verbose",
+    "test:coverage": "jest --verbose --coverage"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
@@ -16,7 +18,6 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
-    "@sentry/react-native": "^7.11.0",
     "@stripe/stripe-react-native": "0.58.0",
     "expo": "~54.0.30",
     "expo-build-properties": "~1.0.10",
@@ -25,6 +26,7 @@
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
@@ -49,8 +51,14 @@
     "socket.io-client": "4"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "eas-cli": "^16.31.0",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.17",
+    "react-native-worklets": "^0.7.2",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true
