--- a/mobile/package.json
+++ b/mobile/package.json
@@ -38,6 +38,7 @@
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
+    "pngjs": "^7.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
@@ -48,7 +49,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
-    "socket.io-client": "4"
+    "socket.io-client": "4",
+    "ts-interface-checker": "^0.1.13"
   },
   "devDependencies": {
     "@testing-library/react-native": "^13.3.3",
