--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -3,8 +3,14 @@ name: Security
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'mobile/**'
+      - 'driver-mobile/**'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'mobile/**'
+      - 'driver-mobile/**'
   schedule:
     - cron: '0 2 * * 1'  # Weekly Monday 2 AM UTC
 
