feat: enterprise audit fixes + Sentry crash reporting
Driver App:
- P0: MMKV encryption key now stored in platform keychain (SecureStore)
- P1: Fix stale PanResponder closure in SwipeToComplete
- P1: Fix timer restart bug in AssignmentPopup
- Centralize sound via SoundService (remove duplicate Audio in popup)
- Fix missing i18n key in AssignmentDetailScreen
- Remove dead code: legal.ts, darkTheme, VVIP_LIGHT_STYLE, unused styles
- Integrate Sentry crash reporting with user context

Customer App:
- Integrate Sentry crash reporting with user context
- Add @sentry/react-native config plugin

--- a/driver-mobile/app.json
+++ b/driver-mobile/app.json
@@ -104,7 +104,8 @@
             "usesCleartextTraffic": false
           }
         }
-      ]
+      ],
+      "@sentry/react-native"
     ],
     "runtimeVersion": "1.0.0",
     "updates": {
