--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.9.0",
+    "@sentry/react-native": "~7.2.0",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-build-properties": "^1.0.10",
