--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:?DB_PASSWORD is required}
       POSTGRES_DB: ${DB_NAME:-qscrap_db}
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -22,13 +22,14 @@ services:
   redis:
     image: redis:alpine
     container_name: qscrap-redis
+    command: redis-server --requirepass ${REDIS_PASSWORD:-qscrap_secure_pass_2026}
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis_data:/data
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: [ "CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-qscrap_secure_pass_2026}", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -55,9 +56,11 @@ services:
       - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required}
       - SESSION_SECRET=${SESSION_SECRET:-}
 
-      # Redis
+      # Redis (Unified URL for v4+ driver)
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-qscrap_secure_pass_2026}
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-qscrap_secure_pass_2026}@redis:6379
 
       # Stripe Payment Gateway
       - PAYMENT_PROVIDER=${PAYMENT_PROVIDER:-stripe}
