Deployment: Auto-migrate on startup enabled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       redis:
         condition: service_healthy
     restart: unless-stopped
-    command: npm run start
+    command: sh -c "npm run db:migrate && npm run start"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:3000/health" ]
       interval: 30s
