--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "QScrap",
-    "slug": "qa-qscrap-app",
+    "slug": "qscrap",
     "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
