--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --ci --coverageReporters=text --coverageReporters=lcov --coverageReporters=clover",
+    "test:unit": "jest --testPathPattern='src/.*\\\\.test\\\\.ts' --testPathIgnorePatterns='tests/contract'",
+    "test:integration": "jest --testPathPattern='tests/contract' --runInBand",
+    "test:auth": "jest auth",
+    "test:middleware": "jest middleware",
+    "test:services": "jest services/__tests__",
+    "test:controllers": "jest controllers/__tests__",
+    "test:contract": "jest tests/contract --runInBand",
+    "test:fl": "jest --findRelatedTests",
+    "test:clear": "jest --clearCache",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "db:reset": "node scripts/reset-and-seed.js",
     "db:migrate": "node scripts/migrate.js",
     "db:migrate:status": "node scripts/migrate.js status",
-    "db:migrate:dry-run": "node scripts/migrate.js dry-run"
+    "db:migrate:dry-run": "node scripts/migrate.js dry-run",
+    "test:run": "./scripts/run-tests.sh",
+    "test:coverage:html": "jest --coverage --coverageReporters=html && open coverage/index.html"
   },
   "keywords": [],
   "author": "",
