--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,24 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "types": [
+      "node",
+      "jest"
+    ],
     "typeRoots": [
       "./node_modules/@types",
       "./src/types"
     ]
   },
   "include": [
-    "src/**/*",
-    "src/types/**/*.d.ts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/__tests__",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "src/jest.setup.ts"
   ]
 }
