--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
           MIGRATION_TOLERANT=true npm run db:migrate
 
       - name: Run tests with coverage
-        run: npm test -- --coverage --ci
+        run: npm run test:ci
         env:
           NODE_ENV: test
           DB_HOST: localhost
