--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "stripe": "^20.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.12.2",
     "uuid": "9.0.1",
     "zod": "^4.2.0"
   },
