--- a/driver-mobile/package.json
+++ b/driver-mobile/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.9.0",
     "@sentry/react-native": "~7.2.0",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-build-properties": "^1.0.10",
